# Laravel/projecte_final/app/Http/Controllers/ClientController.php
@@ -73,23 +73,8 @@ class ClientController extends BaseController
      *    
      *         @OA\Parameter(
      *         in="query",
-     *         name="username",
+     *         name="user_id",
      *         required=true,
-     *         example="username",
-     *         @OA\Schema(type="string"),
-     *     ),
-     *         @OA\Parameter(
-     *         in="query",
-     *         name="email",
-     *         required=true,
-     *         example="user@gmail.com",
-     *         @OA\Schema(type="string"),
-     *     ),
-     *         @OA\Parameter(
-     *         in="query",
-     *         name="password",
-     *         required=true,
-     *          example="username",
      *         @OA\Schema(type="string"),
      *     ),
      *         @OA\Parameter(
@@ -132,29 +117,20 @@ class ClientController extends BaseController
     {
 
         $request->validate([
-            'username' => ['required', 'min:6', 'max:12'],
-            'email' => ['required', 'email'],
-            'password' => ['required', 'min:6', 'max:15'],
             'nom' => ['required', 'max:15'],
             'cognoms' => ['required', 'max:25'],
             'nif' => ['required'],
-            'tipu_id' => ['required', 'integer', 'min:1', 'max:2']
+            'tipu_id' => ['required', 'integer', 'min:1', 'max:2'],
+            'user_id'=> ['required']
         ]);
-
-        $user = User::create([
-            'username' => $request->username,
-            'email' => $request->email,
-            'password' => $request->password,
-            'nom' => $request->nom,
-            'cognoms' => $request->cognoms,
-            'nif' => $request->nif
-        ]);
-
-
 
         $client = Client::create([
-            'user_id' => $user->id,
-            'tipu_id' => $request->tipu_id
+            'nom' => $request->nom,
+            'cognoms' => $request->cognoms,
+            'nif' => $request->nif,
+            'tipu_id' => $request->tipu_id,
+            'user_id' => $request->user_id
+    
 
         ]);
 
@@ -176,23 +152,8 @@ class ClientController extends BaseController
      *     ),
      *         @OA\Parameter(
      *         in="query",
-     *         name="username",
+     *         name="user_id",
      *         required=true,
-     *         example="username",
-     *         @OA\Schema(type="string"),
-     *     ),
-     *         @OA\Parameter(
-     *         in="query",
-     *         name="email",
-     *         required=true,
-     *         example="user@gmail.com",
-     *         @OA\Schema(type="string"),
-     *     ),
-     *         @OA\Parameter(
-     *         in="query",
-     *         name="password",
-     *         required=true,
-     *          example="username",
      *         @OA\Schema(type="string"),
      *     ),
      *         @OA\Parameter(
@@ -234,35 +195,23 @@ class ClientController extends BaseController
     function updateClient(Request $request)
     {
         $request->validate([
-            'username' => ['required', 'min:6', 'max:12'],
-            'email' => ['required', 'email'],
-            'password' => ['required', 'min:6', 'max:15'],
             'nom' => ['required', 'max:15'],
             'cognoms' => ['required', 'max:25'],
             'nif' => ['required'],
-            'tipu_id' => ['required', 'integer', 'min:1', 'max:2']
+            'tipu_id' => ['required', 'integer', 'min:1', 'max:2'],
+            'user_id'=> ['required']
         ]);
 
         $client = Client::find($request->id);
 
         $client->update([
-            'tipu_id' => $request->tipu_id
-
-        ]);
-
-        $user = User::find($client->user_id);
-
-        $user->update([
-            'username' => $request->username,
-            'email' => $request->email,
-            'password' => $request->password,
             'nom' => $request->nom,
             'cognoms' => $request->cognoms,
-            'nif' => $request->nif
+            'nif' => $request->nif,
+            'tipu_id' => $request->tipu_id,
+            'user_id' => $request->user_id
+
         ]);
-
-
-
 
         return $client;
     }
